# snow-assistant

./: .env.example  .gitignore  README.md  app.py  chainlit.md  config.py  pyproject.toml  render.yaml  scheduler.py
.chainlit/: config.toml
.files/20c44004-e861-49f7-84ee-2c62c4331caa/: 264f822b-9a5d-4e89-a277-a739db698d5b.json  c1e41278-2211-4643-97d1-5114ae2fb425.json
agents/: workflow.py
analysis_prompts/: 20251213_230814_stevens_pass_analysis_prompt.txt
docs/: analysis_optimization.md  avalanche_forecast_implementation.md  enhancements.md  tool_implementation_plan.md
models/: local_llm.py
tests/: investigate_nwac_api.py  save_stevens_pass_data.py  stevens_pass_data.json  test_afd.py  test_afd_coverage.py  test_analysis_performance.py  test_avalanche_forecast.py  test_avalanche_integration.py  test_data_deduplication.py  test_fresh_analysis.py  test_noaa_api.py  test_nwac_api_v2.py  test_nwac_integration.py  test_powder_poobah.py  test_scheduler.py  test_tool_calling.py  test_wsdot.py
tools/: basic_tools.py
